--- a/config.json
+++ b/config.json
@@ -1,18 +1,12 @@
 {
-  "token": "your-bot-token",
-  "servers": [
-    {
-      "id": "server1Id",
-      "name": "Server 1"
-    },
-    {
-      "id": "server2Id",
-      "name": "Server 2"
-    },
-    {
-      "id": "server3Id",
-      "name": "Server 3"
-    }
+  "guildIds": [
+    "guildId1",
+    "guildId2",
+    "guildId3"
   ],
-  "errorChannelId": "your-error-channel-id"
+  "roleNames": [
+    "Police",
+    "Paramedic",
+    "Firefighter"
+  ]
 }
